<resources>
    <string name="app_name">4-ReservationAppWithCalendar</string>
    <string name="app_title">Reservation</string>
    <string name="chronometer1Format">Reservation Time: %s</string>
    <string name="startReservation">Start the Reservation</string>
    <string name="calendar">Select Date</string>
    <string name="time">Select Time</string>
    <string name="endReservation">Finish</string>

</resources>
