<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <Chronometer
            android:id="@+id/chronometer1"
            android:format="@string/chronometer1Format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/startReservationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/startReservation"/>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/selectionRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/selectionCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar"/>

        <RadioButton
            android:id="@+id/selectionTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <CalendarView
                android:id="@+id/pickDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </CalendarView>

            <TimePicker
                android:id="@+id/pickTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </TimePicker>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/endReservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endReservation"/>
        <TextView
            android:id="@+id/pickedDateTimeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"/>
    </LinearLayout>

</LinearLayout>